<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/goodBlue"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_simple_logo"
        android:src="@drawable/simple_logo" />

    <View
        android:id="@+id/stroke"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/quiz_navy_blue_border" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/quizText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="12dp"
            android:layout_weight=".6"
            android:background="@drawable/round_rect_shape"
            android:text="@string/tv_sentence"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/quizCurrentSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-35dp"
            android:text="@string/tv_current_sentence"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="20sp" />


        <!-- Blank View --> <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".15" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/bt_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/bt_no"
                android:contentDescription="@string/cd_bt_no"
                android:background="@null" />

            <ImageButton
                android:id="@+id/bt_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/bt_yes"
                android:contentDescription="@string/cd_bt_yes"
                android:background="@null" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
