<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_result"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#406f7c"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="1">

    <!-- Blank View -->  <View
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight=".040" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".415">

        <ImageView
            android:id="@+id/resultImg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_result"
            android:src="@drawable/mortadela" />

        <TextView
            android:id="@+id/tvPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="-40dp"
            android:background="@drawable/round_rect_result"
            android:text="@string/tv_percentage"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </FrameLayout>


    <!-- Blank View -->  <View
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight=".060" />


    <LinearLayout
        android:id="@+id/ll_result_bar"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".07"
        android:layout_gravity="left"
        android:gravity="left"
        android:background="@drawable/result_bar"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/result_line"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:contentDescription="line"
            android:src="@drawable/result_line" />


    </LinearLayout>

    <!-- Blank View --> <View
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight=".015" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight=".30"
        android:background="@drawable/round_rect_shape"
        android:text="@string/tv_result_description"
        android:textSize="22sp" />


    <!-- Blank View -->  <View
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight=".015" />

    <LinearLayout
        android:id="@+id/result_buttons"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight=".070"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="onClickReturnButton"
            android:scaleType="centerInside"
            android:contentDescription="@string/cd_bt_back"
            android:src="@drawable/bt_back" />

        <ImageButton
            android:id="@+id/bt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="onClickShareButton"
            android:scaleType="centerInside"
            android:contentDescription="@string/cd_bt_share"
            android:src="@drawable/bt_share" />


        <ImageButton
            android:id="@+id/bt_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="onClickShareButton"
            android:scaleType="centerInside"
            android:contentDescription="@string/cd_bt_share_facebook"
            android:src="@drawable/bt_facebook" />

    </LinearLayout>


    <!-- Blank View -->  <View
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight=".015" />


</LinearLayout>
