<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:background="#406f7c"
    android:weightSum="1"
    android:orientation="vertical">

    <!-- Blank View --> <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".01" />

    <ImageView
        android:id="@+id/iv_main_image"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".49"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:contentDescription="@string/cd_main_logo"
        android:src="@drawable/main_logo" />

    <!-- Blank View --> <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <Button
                android:id="@+id/bt_start_quiz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_color_shape"
                android:onClick="onClickStartQuiz"
                android:padding="10dp"
                android:text="@string/bt_start_quiz"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <Button
                android:id="@+id/bt_my_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_color_shape"
                android:onClick="onClickShowResultActivity"
                android:padding="10dp"
                android:text="@string/bt_my_result"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <Button
                android:id="@+id/bt_ranks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_color_shape"
                android:onClick="onClickShowStatistics"
                android:padding="10dp"
                android:text="@string/bt_rank"
                android:textSize="24sp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
